Initial commit - heckathon

--- a/index.html
+++ b/index.html
@@ -3,22 +3,20 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>MzanziShield - Cyber Safety for South Africans</title>
-    <meta name="description" content="MzanziShield protects everyday South Africans from online scams, phishing, and cyber threats. Check suspicious links, test passwords, and learn safety tips in your language." />
-    <meta name="author" content="MzanziShield" />
-    <meta name="keywords" content="cyber security, South Africa, scam protection, phishing, online safety, MzanziShield" />
+    <title>eSafeMzansi - Cyber Safety for South Africans</title>
+    <meta name="description" content="eSafeMzansi protects everyday South Africans from online scams, phishing, and cyber threats. Check suspicious links, test passwords, and learn safety tips in your language." />
+    <meta name="author" content="eSafeMzansi" />
+    <meta name="keywords" content="cyber security, South Africa, scam protection, phishing, online safety, eSafeMzansi" />
 
-    <meta property="og:title" content="MzanziShield - Stay Safe Online" />
-    <meta property="og:description" content="Protect yourself from online scams, phishing, and cyber threats with MzanziShield - built for South Africans." />
+    <meta property="og:title" content="eSafeMzansi - Stay Safe Online" />
+    <meta property="og:description" content="Protect yourself from online scams, phishing, and cyber threats with eSafeMzansi - built for South Africans." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="MzanziShield - Cyber Safety for South Africans" />
+    <meta name="twitter:title" content="eSafeMzansi - Cyber Safety for South Africans" />
     <meta name="twitter:description" content="AI-powered protection against online scams and phishing. Multilingual support for isiZulu, isiXhosa, and Sepedi." />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
     
-    <link rel="canonical" href="https://mzanzishield.app" />
+    <link rel="canonical" href="https://esafemzansi.app" />
   </head>
 
   <body>
